tools/tree-sitter-kio/grammar.js
    source_file: ($) => choice(
      $.package_file, seq($.signature_file, repeat($._unit)), $.dependency_file, $.lock_file,
      prec.right(seq(
        repeat(choice($.module_decl, $.import_decl, $.incomplete_import_decl)),
        optional(seq($._body_unit, repeat($._unit))),
      )),
    ),
    _unit: ($) => choice($.module_decl, $.import_decl, $._body_unit),
    _body_unit: ($) => choice($._declaration, $._raw_unit),
    _identifier_like: ($) => choice($.uppercase_identifier, $._value_identifier_like),
    function_definition: ($) =>
      choice(
        seq($.fn_decl_head, $._editor_boundary),
        prec.dynamic(1, seq($.fn_decl_head, $.expression_block)),
      ),

    expression_block: ($) => choice($._complete_expression_block, $.incomplete_expression_block),
    _complete_expression_block: ($) => seq(
      $.bracket_lbrace, repeat($.separator_semicolon),
      repeat(seq(choice($.let_statement, $.row_let_stmt, $._expression), repeat1($.separator_semicolon))),
      optional($._expression), repeat($.unowned_function), $.bracket_rbrace,
    ),
    _local_let_pattern: ($) => choice(
      alias($._value_identifier_like, $.identifier), alias("_", $.slot),
      seq($.separator_dot, $.local_pattern_tuple),
    ),
    keyword_let: ($) => kw("let"),
    _expression: ($) => choice($.operator_expression, $._expression_atom),
    block_call: ($) => prec.right(seq(
      field('head', alias($.elaborator_name, $.block_head)),
      optional(field('prefix', choice($.block_value_arguments, $._block_bare_prefix))),
      field('first', $.neutral_block),
      repeat(field('labelled', $.labelled_block)),
      optional(field('elided', $.elided_block)),
    )),
    _block_bare_prefix: ($) => choice($._block_prefix_atom, $.block_prefix_operator),
    block_prefix_call: ($) => prec.left(seq(
      choice($.call_callee, $.elaborator_name, $.block_prefix_call,
        $.grouped_expression, $.fn_lambda_expr, $.number_literal, $.string_literal, $.bool_literal),
      $.expression_arguments,
    )),
    labelled_block: ($) => seq(field('label', alias($.identifier, $.block_label)), field('body', $.neutral_block)),
    neutral_block: ($) => choice($._complete_neutral_block, $.incomplete_neutral_block),
    _complete_neutral_block: ($) => prec(2, seq(
      $.bracket_lbrace, repeat($.separator_semicolon),
      repeat(seq(choice($.neutral_bind, $.let_statement, $.row_let_stmt, $._expression),
        repeat1($.separator_semicolon))),
      optional($._expression), repeat($.unowned_function), $.bracket_rbrace,
    )),
    neutral_bind: ($) => seq($.keyword_let, $._local_let_pattern,
      alias('<-', $.operator_run), $._expression),
    _type: ($) => choice(
      $.type_path, $.forall_type, $.type_group, $.type_arrow, $.type_product,
      alias(".", $.separator_dot), alias("!", $.operator_builtin), $.slot,
    ),
    type_arrow: ($) => prec.right(1, seq($._type, $.operator_arrow_type, $._type)),
    _expression_name: ($) =>
      $._identifier_like,

    expression_path: ($) =>
      prec.right(seq(
        alias($._identifier_like, $.identifier),
        repeat(seq($.separator_dot, alias($._expression_name, $.identifier))),
      )),

    expression_arguments: ($) => seq(
      $.bracket_lparen,
      optional(sep1(choice($._expression, $._type, $.incomplete_forall_type), $.separator_comma)),
      $.bracket_rparen,
    ),

    keyword_fn: ($) => kw("fn"),
    _visibility_modifier: ($) => prec.dynamic(3, seq($.keyword_pub, optional(seq($.bracket_lparen, $.module_path, $.bracket_rparen)))),

    _fn_decl_modifiers: ($) =>
      prec(3, choice(
        $._visibility_modifier,
        $.keyword_pure,
        seq($._visibility_modifier, $.keyword_pure),
        seq($.keyword_pure, $._visibility_modifier),
      )),
    fn_decl_head: ($) =>
      prec.dynamic(20, prec.right(
        seq(
          optional($._fn_decl_modifiers),
          $.keyword_fn,
          alias($._identifier_like, $.entity_name_function),
          $.fn_signature,
          optional($._fn_return_type),
        ),
      )),

    elaborator_decl: ($) =>
      prec.dynamic(50,
        seq(
          optional($._visibility_modifier),
          $.keyword_declaration,
          alias($._callable_path_segment, $.entity_name_function),
          $.operator_builtin, // `:`
          $._type,
          $.elaborator_body,
        ),
      ),

    elaborator_body: ($) =>
      semicolonBody($, seq(
        repeat(choice($.comment_doc, $.comment_line)),
        fieldOrders([$.elaborator_impl_clause], [$.elaborator_captures_clause], [$.trailing_block_clause], $.separator_semicolon),
        repeat(choice($.comment_doc, $.comment_line)),
      )),

    trailing_block_clause: ($) => seq(
      alias(kw("trailing"), $.keyword_declaration),
      alias(kw(choice("product", "thunk", "sequence")), $.keyword_declaration),
      optional(field("label", alias($.identifier, $.block_label))),
    ),

    elaborator_impl_clause: ($) =>
      seq(
        alias(token(prec(3, "impl")), $.keyword_declaration),
        choice(
          $.callable_path,
          seq(
            repeat($._callable_path_comment),
            $.bracket_lparen,
            repeat($._callable_path_comment),
            alias(token(prec(3, "fills")), $.keyword_declaration),
            repeat($._callable_path_comment),
            $.bracket_rparen,
            $.callable_path,
          ),
        ),
      ),

    callable_path: ($) =>
      prec.right(
        seq(
          repeat($._callable_path_comment),
          repeat(
            seq(
              alias($._callable_path_segment, $.identifier),
              repeat($._callable_path_comment),
              $.separator_dot,
              repeat($._callable_path_comment),
            ),
          ),
          alias($._callable_path_segment, $.entity_name_function),
          repeat($._callable_path_comment),
        ),
      ),

    _callable_path_comment: ($) =>
      choice(
        $.comment_doc,
        $.comment_line,
      ),

    _callable_path_segment: ($) => $._identifier_like,
    _fn_return_type: ($) =>
      prec.right(seq($.operator_arrow_type, $._type)),
    fn_signature: ($) =>
      prec.dynamic(30, prec.right(repeat1(choice($.type_param_group, $.value_param_group)))),

    value_param_group: ($) =>
      seq(
        $.bracket_lparen,
        optional(sep1($.value_param_binder, $.separator_comma)),
        $.bracket_rparen,
      ),

    separator_semicolon: ($) => ";",
    separator_dot: ($) => ".",
    keyword_declaration: ($) => kw("elab"),
    elaborator_name: ($) =>
      token(
        prec(2, seq(
          VALUE_REFERENCE_NAME,
          "!",
        )),
      ),
    bracket_lparen: ($) => "(",
    bracket_rparen: ($) => ")",
    bracket_lbrace: ($) => "{",
    bracket_rbrace: ($) => "}",
    operator_arrow_type: ($) => "->",
    operator_builtin: ($) => choice("&", "|", "=", ":", "!"),
    operator_run: ($) => choice($._fixed_run, $._minus, "/"),
    identifier: ($) => token(choice(
      /[A-Za-z][A-Za-z0-9_]*/,
      /_+[A-Za-z0-9][A-Za-z0-9_]*/,
    )),
  },
});
